# xfl2svg

./: CHANGELOG.md  README.md  pyproject.toml
xfl2svg/: __init__.py  __main__.py  color_effect.py  svg_renderer.py  util.py  xfl_reader.py
xfl2svg/shape/: __init__.py  edge.py  gradient.py  shape.py  style.py
